Fixing image crops and spacing for exhibitions section on homepage per issue #30

--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -69,9 +69,14 @@ body.page-home {
   .recent-exhibits {
     position: relative;
 
+    @include media-lg {
+      margin-top: $padding-lg * 1.5;
+      margin-bottom: $padding-lg * 1.5;
+    }
+
     .section-character {
       top: 50%;
-      width: 113%;
+      width: 100%;
       max-width: none;
       max-width: 2568px;
       transform: translate(-50%, -50%);
@@ -90,5 +95,4 @@ body.page-home {
       }
     }
   }
-
 }
